bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q2 (Optimized, String).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&explanation.optimized_logical_plan.to_string()"
---
Projection: ENC_PT(otherProduct) AS otherProduct, ENC_PT(sameFeatures) AS sameFeatures
  Sort: AS_SORTABLE_BYTES(sameFeatures) DESC NULLS FIRST, AS_SORTABLE_BYTES(ENC_TF(ENC_PT(otherProduct))) ASC NULLS FIRST, fetch=10
    Projection: lhs.otherProduct AS otherProduct, rhs.sameFeatures AS sameFeatures
      Inner Join: lhs.otherProduct = rhs.otherProduct
        SubqueryAlias: lhs
          Filter: otherProduct != Utf8("<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer13/Product636>")
            QuadPattern: triple_pattern=[?otherProduct <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/Product>]
        SubqueryAlias: rhs
          Projection: otherProduct, <uuid> AS sameFeatures
            Aggregate: groupBy=[[otherProduct AS otherProduct]], aggr=[[COUNT(otherFeature) AS <uuid>]]
              BasicGraphPattern: projection=[otherProduct, otherFeature], filters=[EBV(EQ(ENC_TF(ENC_PT(feature)), ENC_TF(ENC_PT(otherFeature)))), otherProduct != Utf8("<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer13/Product636>")]
                QuadPattern: triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer13/Product636> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?feature]
                QuadPattern: triple_pattern=[?otherProduct <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?otherFeature]
