bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q3 (Execution Plan, ObjectId).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&string"
---
ProjectionExec: expr=[product@0 as product, ENC_PT(ratio@3) as ratio]
  SortExec: TopK(fetch=10), expr=[AS_SORTABLE_BYTES(DIV(xsd:float(monthCount@1), monthBeforeCount@2)) DESC, AS_SORTABLE_BYTES(ENC_TF(product@0)) ASC], preserve_partitioning=[false]
    DecodeObjectIdsExec: projections=[decode(product) as product, monthCount, monthBeforeCount, ratio]
      ProjectionExec: expr=[product@0 as product, monthCount@1 as monthCount, monthBeforeCount@2 as monthBeforeCount, DIV(xsd:float(monthCount@1), monthBeforeCount@2) as ratio]
        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, monthCount@1, monthBeforeCount@3]
          ProjectionExec: expr=[product@0 as product, <uuid>@1 as monthCount]
            AggregateExec: mode=Single, gby=[product@1 as product], aggr=[<uuid>]
              DecodeObjectIdsExec: projections=[decode(review) as review, product, date]
                FilterExec: EBV(LT(ENC_TF(date@2), 5:{date_time_type:1,value:63329990400.000000000000000000,offset:})) AND EBV(GEQ(ENC_TF(date@2), 5:{date_time_type:1,value:63327571200.000000000000000000,offset:}))
                  DecodeObjectIdsExec: projections=[review, product, decode(date) as date]
                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@0, review@0)], projection=[review@0, product@1, date@3]
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> ?product], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as review, object@3 as product], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 84986, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 84986 AND 84986 <= predicate_max@2, required_guarantees=[predicate in (84986)]
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://purl.org/dc/elements/1.1/date> ?date], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as review, object@3 as date], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 1613 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 1613 AND 1613 <= predicate_max@2, required_guarantees=[predicate in (1613)]
          ProjectionExec: expr=[product@0 as product, <uuid>@1 as monthBeforeCount]
            FilterExec: EBV(GT(<uuid>@1, 4:4:0))
              AggregateExec: mode=Single, gby=[product@1 as product], aggr=[<uuid>]
                DecodeObjectIdsExec: projections=[decode(review) as review, product, date]
                  FilterExec: EBV(LT(ENC_TF(date@2), 5:{date_time_type:1,value:63327571200.000000000000000000,offset:})) AND EBV(GEQ(ENC_TF(date@2), 5:{date_time_type:1,value:63325152000.000000000000000000,offset:}))
                    DecodeObjectIdsExec: projections=[review, product, decode(date) as date]
                      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@0, review@0)], projection=[review@0, product@1, date@3]
                        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> ?product], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as review, object@3 as product], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 84986, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 84986 AND 84986 <= predicate_max@2, required_guarantees=[predicate in (84986)]
                        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://purl.org/dc/elements/1.1/date> ?date], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.parquet:0..12298985]]}, projection=[subject@1 as review, object@3 as date], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 1613 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 1613 AND 1613 <= predicate_max@2, required_guarantees=[predicate in (1613)]
