bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q3 (Execution Plan, PlainTerm).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&string"
---
ProjectionExec: expr=[product@0 as product, ENC_PT(ratio@3) as ratio]
  SortExec: TopK(fetch=10), expr=[AS_SORTABLE_BYTES(DIV(xsd:float(monthCount@1), monthBeforeCount@2)) DESC, AS_SORTABLE_BYTES(ENC_TF(product@0)) ASC], preserve_partitioning=[false]
    ProjectionExec: expr=[product@0 as product, monthCount@1 as monthCount, monthBeforeCount@2 as monthBeforeCount, DIV(xsd:float(monthCount@1), monthBeforeCount@2) as ratio]
      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, monthCount@1, monthBeforeCount@3]
        ProjectionExec: expr=[product@0 as product, <uuid>@1 as monthCount]
          AggregateExec: mode=Single, gby=[product@1 as product], aggr=[<uuid>]
            ProjectionExec: expr=[review@0 as review, product@1 as product]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@0, review@0)], projection=[review@0, product@1, date@3]
                ProjectionExec: expr=[subject@0 as review, object@1 as product]
                  FilterExec: graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor,data_type:,language_tag:}, projection=[subject@1, object@3]
                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> ?product], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor,data_type:,language_tag:}, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor,data_type:,language_tag:} AND {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor,data_type:,language_tag:} <= predicate_max@2, required_guarantees=[predicate in ({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor,data_type:,language_tag:})]
                ProjectionExec: expr=[subject@0 as review, object@1 as date]
                  FilterExec: EBV(GEQ(ENC_TF(object@3), 5:{date_time_type:1,value:63327571200.000000000000000000,offset:})) AND EBV(LT(ENC_TF(object@3), 5:{date_time_type:1,value:63329990400.000000000000000000,offset:})) AND graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://purl.org/dc/elements/1.1/date,data_type:,language_tag:}, projection=[subject@1, object@3]
                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://purl.org/dc/elements/1.1/date> ?date], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://purl.org/dc/elements/1.1/date,data_type:,language_tag:}, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= {term_type:0,value:http://purl.org/dc/elements/1.1/date,data_type:,language_tag:} AND {term_type:0,value:http://purl.org/dc/elements/1.1/date,data_type:,language_tag:} <= predicate_max@2, required_guarantees=[predicate in ({term_type:0,value:http://purl.org/dc/elements/1.1/date,data_type:,language_tag:})]
        ProjectionExec: expr=[product@0 as product, <uuid>@1 as monthBeforeCount]
          FilterExec: EBV(GT(<uuid>@1, 4:4:0))
            AggregateExec: mode=Single, gby=[product@1 as product], aggr=[<uuid>]
              ProjectionExec: expr=[review@0 as review, product@1 as product]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@0, review@0)], projection=[review@0, product@1, date@3]
                  ProjectionExec: expr=[subject@0 as review, object@1 as product]
                    FilterExec: graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor,data_type:,language_tag:}, projection=[subject@1, object@3]
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> ?product], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor,data_type:,language_tag:}, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor,data_type:,language_tag:} AND {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor,data_type:,language_tag:} <= predicate_max@2, required_guarantees=[predicate in ({term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor,data_type:,language_tag:})]
                  ProjectionExec: expr=[subject@0 as review, object@1 as date]
                    FilterExec: EBV(GEQ(ENC_TF(object@3), 5:{date_time_type:1,value:63325152000.000000000000000000,offset:})) AND EBV(LT(ENC_TF(object@3), 5:{date_time_type:1,value:63327571200.000000000000000000,offset:})) AND graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://purl.org/dc/elements/1.1/date,data_type:,language_tag:}, projection=[subject@1, object@3]
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://purl.org/dc/elements/1.1/date> ?date], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/indexes/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[graph, subject, predicate, object], output_ordering=[graph@0 ASC, predicate@2 ASC, object@3 ASC, subject@1 ASC], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = {term_type:0,value:http://purl.org/dc/elements/1.1/date,data_type:,language_tag:}, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= {term_type:0,value:http://purl.org/dc/elements/1.1/date,data_type:,language_tag:} AND {term_type:0,value:http://purl.org/dc/elements/1.1/date,data_type:,language_tag:} <= predicate_max@2, required_guarantees=[predicate in ({term_type:0,value:http://purl.org/dc/elements/1.1/date,data_type:,language_tag:})]
