bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q3 (Execution Plan, String).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(product@0) as product, ENC_PT(ratio@3) as ratio]
  SortExec: TopK(fetch=10), expr=[AS_SORTABLE_BYTES(DIV(xsd:float(monthCount@1), monthBeforeCount@2)) DESC, AS_SORTABLE_BYTES(ENC_TF(ENC_PT(product@0))) ASC], preserve_partitioning=[false]
    ProjectionExec: expr=[product@0 as product, monthCount@1 as monthCount, monthBeforeCount@2 as monthBeforeCount, DIV(xsd:float(monthCount@1), monthBeforeCount@2) as ratio]
      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, monthCount@1, monthBeforeCount@3]
        ProjectionExec: expr=[product@0 as product, <uuid>@1 as monthCount]
          AggregateExec: mode=Single, gby=[product@1 as product], aggr=[<uuid>]
            ProjectionExec: expr=[review@0 as review, product@1 as product]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@0, review@0)], projection=[review@0, product@1, date@3]
                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> ?product], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as review, object@3 as product], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor>, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor>)]
                FilterExec: EBV(LT(ENC_TF(ENC_PT(date@1)), 5:{date_time_type:1,value:63329990400.000000000000000000,offset:})) AND EBV(GEQ(ENC_TF(ENC_PT(date@1)), 5:{date_time_type:1,value:63327571200.000000000000000000,offset:}))
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://purl.org/dc/elements/1.1/date> ?date], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as review, object@3 as date], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://purl.org/dc/elements/1.1/date> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://purl.org/dc/elements/1.1/date> AND <http://purl.org/dc/elements/1.1/date> <= predicate_max@2, required_guarantees=[predicate in (<http://purl.org/dc/elements/1.1/date>)]
        ProjectionExec: expr=[product@0 as product, <uuid>@1 as monthBeforeCount]
          FilterExec: EBV(GT(<uuid>@1, 4:4:0))
            AggregateExec: mode=Single, gby=[product@1 as product], aggr=[<uuid>]
              ProjectionExec: expr=[review@0 as review, product@1 as product]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(review@0, review@0)], projection=[review@0, product@1, date@3]
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> ?product], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as review, object@3 as product], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor>, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> AND <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> <= predicate_max@2, required_guarantees=[predicate in (<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor>)]
                  FilterExec: EBV(LT(ENC_TF(ENC_PT(date@1)), 5:{date_time_type:1,value:63327571200.000000000000000000,offset:})) AND EBV(GEQ(ENC_TF(ENC_PT(date@1)), 5:{date_time_type:1,value:63325152000.000000000000000000,offset:}))
                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?review <http://purl.org/dc/elements/1.1/date> ?date], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/quad-tables/GPOS/delta-parquet-file.zstd.parquet:0..17880018]]}, projection=[subject@1 as review, object@3 as date], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = <http://purl.org/dc/elements/1.1/date> AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= <http://purl.org/dc/elements/1.1/date> AND <http://purl.org/dc/elements/1.1/date> <= predicate_max@2, required_guarantees=[predicate in (<http://purl.org/dc/elements/1.1/date>)]
