bench/tests/plans/snapshots/r#mod__plans__bsbm_business_intelligence__BSBM Business Intelligence - Q3 (Optimized).snap
---
source: bench/tests/plans/bsbm_business_intelligence.rs
expression: "&explanation.optimized_logical_plan.to_string()"
---
Projection: ENC_PT(product) AS product, ENC_PT(ratio) AS ratio
  Sort: ENC_SORT(DIV(xsd:float(monthCount), monthBeforeCount)) DESC NULLS FIRST, ENC_SORT(ENC_TF(ENC_PT(product))) ASC NULLS FIRST, fetch=10
    Projection: lhs.product AS product, lhs.monthCount AS monthCount, rhs.monthBeforeCount AS monthBeforeCount, DIV(xsd:float(lhs.monthCount), rhs.monthBeforeCount) AS ratio
      Inner Join: lhs.product = rhs.product
        SubqueryAlias: lhs
          Projection: product, INT64_AS_TERM(<uuid>) AS monthCount
            Aggregate: groupBy=[[product AS product]], aggr=[[count(review) AS <uuid>]]
              Projection: lhs.review AS review, lhs.product AS product
                Inner Join: lhs.review = rhs.review
                  SubqueryAlias: lhs
                    QuadPattern (?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> ?product)
                  SubqueryAlias: rhs
                    Projection: review
                      Filter: EBV(GEQ(__common_expr_5, Union 5:{date_time_type:1,value:63327571200.000000000000000000,offset:})) AND EBV(LT(__common_expr_5, Union 5:{date_time_type:1,value:63329990400.000000000000000000,offset:}))
                        Projection: ENC_TF(date) AS __common_expr_5, review
                          QuadPattern (?review <http://purl.org/dc/elements/1.1/date> ?date)
        SubqueryAlias: rhs
          Projection: product, INT64_AS_TERM(<uuid>) AS monthBeforeCount
            Filter: EBV(GT(INT64_AS_TERM(<uuid>), Union 4:4:0))
              Aggregate: groupBy=[[product AS product]], aggr=[[count(review) AS <uuid>]]
                Projection: lhs.review AS review, lhs.product AS product
                  Inner Join: lhs.review = rhs.review
                    SubqueryAlias: lhs
                      QuadPattern (?review <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/reviewFor> ?product)
                    SubqueryAlias: rhs
                      Projection: review
                        Filter: EBV(GEQ(__common_expr_6, Union 5:{date_time_type:1,value:63325152000.000000000000000000,offset:})) AND EBV(LT(__common_expr_6, Union 5:{date_time_type:1,value:63327571200.000000000000000000,offset:}))
                          Projection: ENC_TF(date) AS __common_expr_6, review
                            QuadPattern (?review <http://purl.org/dc/elements/1.1/date> ?date)
